[package]
name = "leetcode"
version = "0.1.0"
authors = ["Rafal Piotrowski <rafalpiotrowski@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3